--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tiny-popover": "^6.0.5",
+    "redux": "^4.1.0",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "styled-components": "^5.3.0",
