--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.8",
+    "react-number-format": "^4.6.3",
     "react-phone-number-input": "^3.1.23",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.2.0",
